--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,15 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.spring</groupId>
-			<artifactId>AI-Powered-Job-Application-Tracker</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+    <scope>provided</scope>
+</dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-mongodb</artifactId>
+</dependency>
 	</dependencies>
 
 	<build>
