--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=Journal App
+spring.mongodb.host=localhost
+spring.mongodb.port=27017
+spring.mongodb.database=journaldb
+spring.main.allow-bean-definition-overriding=true
