--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=Journal App
-spring.mongodb.host=localhost
-spring.mongodb.port=27017
+#spring.mongodb.host=localhost
+#spring.mongodb.port=27017
+spring.mongodb.uri=mongodb+srv://neha:neha@cluster0.egajdca.mongodb.net/?appName=Cluster0
 spring.mongodb.database=journaldb
-spring.main.allow-bean-definition-overriding=true
+spring.data.mongodb.auto-index-creation=true
